[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Bucket.tscn" type="PackedScene" id=2]
[ext_resource path="res://Display.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tilesetOpenGameBackground.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 416.962, 0, 0, 0, 0, 0, 25.8868, 0 )
}

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 242, 0 )
b = Vector2( -238, 0 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 1.08163, 0.0224719 )
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2( 111.627, 0 )
rotation = 3.14159
offset = 305.96

[node name="Bucket" parent="." instance=ExtResource( 2 )]
position = Vector2( 237, 660 )
scale = Vector2( 2, 2 )

[node name="Ground" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 238, 710 )
shape = SubResource( 2 )

[node name="Display" parent="." instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 488.0
margin_bottom = 728.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="AppleCaught" from="Bucket" to="." method="_on_Bucket_AppleCaught"]
[connection signal="body_shape_entered" from="Ground" to="." method="_on_Ground_body_shape_entered"]
